tests/reference/cpp-print_01-026ef17.stderr
semantic error: The symbol sep is not found
 --> tests/../integration_tests/print_01.py:7:5
  |
7 |     print("a", "b", sep=x)
  |     ^^^^^^^^^^^^^^^^^^^^^^ 
